# libomemo-c

./: .gitignore  CMakeLists.txt  README.md
protobuf/: Makefile  OMEMO.proto
rpm/: libomemo-c.spec
src/: CMakeLists.txt  curve.c  protocol.c  protocol.h  ratchet.c  session_cipher.c
src/curve25519/: CMakeLists.txt
src/curve25519/ed25519/tests/: internal_fast_tests.c
tests/: CMakeLists.txt  test_curve25519.c  test_protocol.c  test_ratchet.c  test_session_builder.c  test_session_record.c  test_simultaneous_initiate.c
